# tic-tac-5-rust

./: .editorconfig  .env-example  .eslintrc.json  .gitignore  .prettierignore  README.md  docker-compose.yml  ex.sh  fly.toml  netlify.toml  package.json  pnpm-lock.yaml  prototypes.sh  run.sh  scripts.sh  tsconfig.json
.ansible/: README.md
.ansible/deploy/: hosts.example  playbook.yml
.ansible/deploy-server/: playbook.yml
.ansible/deploy/vars/: default.yml
.github/workflows/: deploy-server.yml  deploy-worker.yml  fly.yml  gh-pages.yml  web.yml
crates/game/: Cargo.toml
crates/game/src/: board.rs  game.rs  game_state.rs  main.rs  terminal_ui.rs
crates/server/: Cargo.toml  Dockerfile
crates/server/src/: connection.rs  context.rs  lobby.rs  main.rs  player_context.rs  socket.rs
crates/server/src/game/: game.rs  game_handle.rs  game_manager.rs  listed_game.rs  mod.rs  serialize_server_event.rs  write_server_msg.rs
crates/server/src/handlers/: auth.rs  auth_handlers.rs  mod.rs  ws.rs  ws_handler.rs
crates/server/src/state/: client.rs  context.rs  context_old.rs  events.rs  game_manager.rs  jwt_manager.rs  lobby.rs  lobby_actor.rs  lobby_handle.rs  mod.rs  session_manager.rs
crates/server/src/ws/: mod.rs  serialize_server_event.rs  session.rs  session_handle.rs  session_manager.rs  session_state.rs  ws_handler.rs  ws_session.rs  ws_session_handle.rs
crates/tic-tac-5/: Cargo.toml  events.rs  main_old.rs
crates/tic-tac-5/src/: board.rs  events.rs  game_state.rs  lib.rs
crates/tic-tac-5/src/proto/: client_events.rs  game.rs  mod.rs  proto_all.rs  server_events.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: ai.rs  board.rs  empty_cells.rs  lib.rs
protos/: client_events.proto  game.proto  proto_all.proto  server_events.proto
