[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"] }
env_logger = { version = "0.9.1" }
futures-util = { version = "0.3.24" }
hmac = "0.12.1"
jwt = "0.16.0"
log = { version = "0.4", features = ["std"] }
quick-protobuf = { version = "0.8.1" }
rand = "0.8.5"
sentry = "0.29.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.6"
tic-tac-5 = { path = "../tic-tac-5" }
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
